--- a/src/style.css
+++ b/src/style.css
@@ -49,7 +49,6 @@ body {
   max-width: 30rem;
   margin: 0 auto;
   padding: 1.5rem 2rem;
-  background-color: white;
   border-radius: 8px;
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.15);
 }
@@ -67,13 +66,48 @@ body {
   display: flex;
   justify-content: space-between;
 }
+.tab-links {
+  text-decoration: none;
+  color: black;
+}
 input {
   background-repeat: no-repeat;
   background-position: right 1rem center;
   background-size: 0.75rem;
+  margin-bottom: 0.75em;
 }
 footer {
   text-align: center;
+}
+[type=text],
+[type=email],
+select,
+textarea {
+  display: block;
+  padding: 0.5rem;
+  background: transparent;
+  width: 100%;
+  max-width: 100%;
+  border: 1px solid #cdcdcd;
+  border-radius: 4px;
+  font-size: 0.95rem;
+}
+/* button */
+.submit-btn {
+  display: inline-block;
+  vertical-align: middle;
+  white-space: nowrap;
+  cursor: pointer;
+  margin: 0.25rem 0;
+  padding: 0.5rem 1rem;
+  border: 1px solid #1e6bd6;
+  border-radius: 5px;
+  background: #1e6bd6;
+  color: white;
+  font-weight: 600;
+  text-decoration: none;
+  font-family: sans-serif;
+  font-size: 0.95rem;
 }
 .about img {
   max-width: 20%;
