Set prices of items to display currency type in USD

--- a/src/style.css
+++ b/src/style.css
@@ -65,6 +65,8 @@ body {
 .item {
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  padding: 0 3em;
 }
 .tab-links {
   text-decoration: none;
